@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/arch/x86.py,v 1.15 2005/07/05 21:53:41 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/arch/x86.py,v 1.16 2005/07/06 18:50:25 wolf31o2 Exp $
 
 import builder,os
 from catalyst_support import *
@@ -21,25 +21,25 @@ class arch_x86(generic_x86):
 	"builder class for generic x86 (386+)"
 	def __init__(self,myspec):
 		generic_x86.__init__(self,myspec)
-		self.settings["CFLAGS"]="-O2 -mcpu=i686 -fomit-frame-pointer"
+		self.settings["CFLAGS"]="-O2 -mcpu=i686"
 		self.settings["CHOST"]="i386-pc-linux-gnu"
 
 class arch_i386(generic_x86):
 	def __init__(self,myspec):
 		generic_x86.__init__(self,myspec)
-		self.settings["CFLAGS"]="-O2 -march=i386 -fomit-frame-pointer"
+		self.settings["CFLAGS"]="-O2 -march=i386"
 		self.settings["CHOST"]="i386-pc-linux-gnu"
 
 class arch_i486(generic_x86):
 	def __init__(self,myspec):
 		generic_x86.__init__(self,myspec)
-		self.settings["CFLAGS"]="-O2 -march=i486 -fomit-frame-pointer"
+		self.settings["CFLAGS"]="-O2 -march=i486"
 		self.settings["CHOST"]="i486-pc-linux-gnu"
 
 class arch_i586(generic_x86):
 	def __init__(self,myspec):
 		generic_x86.__init__(self,myspec)
-		self.settings["CFLAGS"]="-O2 -march=i586 -fomit-frame-pointer"
+		self.settings["CFLAGS"]="-O2 -march=i586"
 		self.settings["CHOST"]="i586-pc-linux-gnu"
 
 class arch_pentium_mmx(arch_i586):
@@ -50,13 +50,13 @@ class arch_pentium_mmx(arch_i586):
 class arch_i686(generic_x86):
 	def __init__(self,myspec):
 		generic_x86.__init__(self,myspec)
-		self.settings["CFLAGS"]="-O2 -march=i686 -fomit-frame-pointer"
+		self.settings["CFLAGS"]="-O2 -march=i686"
 		self.settings["CHOST"]="i686-pc-linux-gnu"
 
 class arch_athlon(generic_x86):
 	def __init__(self,myspec):
 		generic_x86.__init__(self,myspec)
-		self.settings["CFLAGS"]="-O2 -march=athlon -fomit-frame-pointer"
+		self.settings["CFLAGS"]="-O2 -march=athlon"
 		self.settings["CHOST"]="i686-pc-linux-gnu"
 		self.settings["HOSTUSE"]=["mmx","3dnow"]
 
@@ -64,21 +64,21 @@ class arch_athlon_xp(generic_x86):
 	#this handles XP and MP processors
 	def __init__(self,myspec):
 		generic_x86.__init__(self,myspec)
-		self.settings["CFLAGS"]="-O2 -march=athlon-xp -fomit-frame-pointer"
+		self.settings["CFLAGS"]="-O2 -march=athlon-xp"
 		self.settings["CHOST"]="i686-pc-linux-gnu"
 		self.settings["HOSTUSE"]=["mmx","3dnow"]
 
 class arch_pentium4(generic_x86):
 	def __init__(self,myspec):
 		generic_x86.__init__(self,myspec)
-		self.settings["CFLAGS"]="-O2 -march=pentium4 -fomit-frame-pointer"
+		self.settings["CFLAGS"]="-O2 -march=pentium4"
 		self.settings["CHOST"]="i686-pc-linux-gnu"
 		self.settings["HOSTUSE"]=["mmx","sse"]
 
 class arch_pentium3(generic_x86):
 	def __init__(self,myspec):
 		generic_x86.__init__(self,myspec)
-		self.settings["CFLAGS"]="-O2 -march=pentium3 -fomit-frame-pointer"
+		self.settings["CFLAGS"]="-O2 -march=pentium3"
 		self.settings["CHOST"]="i686-pc-linux-gnu"
 		self.settings["HOSTUSE"]=["mmx","sse"]
 
